<resources>
    <string name="app_name">4Fitness</string>
    <string name="back_arrow_RC">back_arrow</string>
    <string name="settings_button_RC">settings_button</string>
    <string name="background_topactivitybar_RC">background_topActivityBar</string>
    <string name="logo_topactivitybar_RC">logo_topActivityBar</string>
    <string name="image_card1_RC">image_card</string>
    <string name="image_card2_RC">image_card2</string>
    <string name="image_card3_RC">image_card3</string>
    <string name="text_card2_RC">text_card2</string>
    <string name="text_card1_RC">text_card</string>
    <string name="image_card4_RC">image_card4</string>
    <string name="text_card4_RC">text_card4</string>
    <string name="text_card3_RC">text_card3</string>
    <string name="image_card5_RC">image_card5</string>
    <string name="text_card5_RC">text_card5</string>
    <string name="image_card6_RC">image_card6</string>
    <string name="text_card6_RC">text_card6</string>
    <string name="background_bottomactivitybar_RC">background_bottomActivityBar</string>
    <string name="home_button_image_RC">home_button_image</string>
    <string name="profile_button_image_RC">profile_button_image</string>
    <string name="goals_button_image_RC">goals_button_image</string>
    <string name="calories_RC">Calories</string>
    <string name="diet_RC">Diet Ideas</string>
    <string name="steps_RC">Steps</string>
    <string name="workouts_RC">Workouts</string>
    <string name="timer_RC">Timer</string>
    <string name="articles">Articles</string>
    <string name="title_activity_login">activity_login</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create_new_account">Create New Account</string>
    <string name="or">OR</string>
    <string name="login_with_google">Login with google</string>
    <string name="login_with_facebook">LOGIN WITH FACEBOOK</string>
    <string name="register">Register</string>
    <string name="already_have_account">Already have account?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="add_mealRC">ADD MEAL</string>
    <string name="of_0_kcalER">of 0 kcal</string>
    <string name="proteins">Proteins</string>
    <string name="fats">Fats</string>
    <string name="carbs">Carbs</string>
    <string name="_0">0</string>
    <string name="of_0g">of 0g</string>
    <string name="view_nanalytics">VIEW\nANALYTICS</string>
    <string name="set_goals">SET GOALS</string>
    <string name="kcal_day">KCAL/DAY</string>
    <string name="change">CHANGE</string>
    <string name="_0_00">0.00</string>
    <string name="kg">KG</string>
    <string name="macros">MACROS</string>
    <string name="weight">WEIGHT</string>
    <string name="image_background">IMAGE_BACKGROUND</string>
    <string name="reset_to_default">RESET to DEFAULT</string>
    <string name="_00_0">00.0</string>
    <string name="enter_your_weight">Enter your weight</string>
    <string name="enter">ENTER</string>
    <string name="enter_your_weight_xx_x_format">Enter your weight (XX.X FORMAT)</string>
    <string name="forum">Forum</string>
    <string name="quizzes">Quizzes</string>
    <string name="cancel">CANCEL</string>
    <string name="use_x_xx_format">Use x.xx format</string>
</resources>