<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#56000000" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bottom_activity_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:contentDescription="@string/background_bottomactivitybar_RC"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/down_activity_bar_half_rectangle" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/image_home"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_alignParentStart="true"
                        android:clickable="true"
                        android:contentDescription="@string/home_button_image_RC"
                        android:focusable="true"
                        android:src="@drawable/src_house_icon" />

                    <ImageView
                        android:id="@+id/image_profile"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_centerInParent="true"
                        android:clickable="true"
                        android:contentDescription="@string/profile_button_image_RC"
                        android:focusable="true"
                        android:src="@drawable/src_profile_icon" />

                    <ImageView
                        android:id="@+id/image_goals"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_alignParentEnd="true"
                        android:clickable="true"
                        android:contentDescription="@string/goals_button_image_RC"
                        android:focusable="true"
                        android:src="@drawable/src_target_icon" />


                </RelativeLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/bottom_background_activity"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:contentDescription="@string/background_topactivitybar_RC"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/background_top_rectangle" />

        <ImageView
            android:id="@+id/logo_activityBar"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:contentDescription="@string/logo_topactivitybar_RC"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo_nobkg" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/image_settings"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignParentEnd="true"
                android:clickable="true"
                android:contentDescription="@string/settings_button_RC"
                android:focusable="true"
                android:src="@drawable/src_settings_icon" />

        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/top_activity_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </androidx.constraintlayout.widget.ConstraintLayout>


            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alignmentMode="alignMargins"
                android:columnCount="2"
                android:columnOrderPreserved="false"
                android:rowCount="3">


                <androidx.cardview.widget.CardView

                    android:id="@+id/card_calories"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_margin="12dp"
                    android:clickable="true"
                    android:focusable="true"
                    app:cardBackgroundColor="#e5e5e5"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="6dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="16dp"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:contentDescription="@string/image_card1_RC"
                            android:src="@drawable/src_diet_icon" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:contentDescription="@string/text_card1_RC"
                            android:text="@string/calories_RC"
                            android:textColor="#6f6f6f"
                            android:textSize="18sp" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_diet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_margin="12dp"
                    app:cardBackgroundColor="#e5e5e5"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="6dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="16dp"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:contentDescription="@string/image_card2_RC"
                            android:src="@drawable/src_diet_icon" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:contentDescription="@string/text_card2_RC"
                            android:text="@string/diet_RC"
                            android:textColor="#6f6f6f"
                            android:textSize="18sp" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    android:id="@+id/card_steps"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_margin="12dp"
                    app:cardBackgroundColor="#e5e5e5"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="6dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="16dp"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:contentDescription="@string/image_card3_RC"
                            android:src="@drawable/src_diet_icon" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:contentDescription="@string/text_card3_RC"
                            android:text="@string/steps_RC"
                            android:textColor="#6f6f6f"
                            android:textSize="18sp" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_workouts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_margin="12dp"
                    app:cardBackgroundColor="#e5e5e5"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="6dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="16dp"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:contentDescription="@string/image_card4_RC"
                            android:src="@drawable/src_diet_icon" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:contentDescription="@string/text_card4_RC"
                            android:text="@string/workouts_RC"
                            android:textColor="#6f6f6f"
                            android:textSize="18sp" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_timer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_margin="12dp"
                    app:cardBackgroundColor="#e5e5e5"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="6dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="16dp"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:contentDescription="@string/image_card5_RC"
                            android:src="@drawable/src_diet_icon" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:contentDescription="@string/text_card5_RC"
                            android:text="Journal"
                            android:textColor="#6f6f6f"
                            android:textSize="18sp" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_articles"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_margin="12dp"
                    app:cardBackgroundColor="#e5e5e5"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="6dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="16dp"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:contentDescription="@string/image_card6_RC"
                            android:src="@drawable/src_diet_icon" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:contentDescription="@string/text_card6_RC"
                            android:text="@string/articles"
                            android:textColor="#6f6f6f"
                            android:textSize="18sp" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </GridLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>